--- a/public/sass/_navbar.scss
+++ b/public/sass/_navbar.scss
@@ -7,16 +7,16 @@ nav {
 }
 
 .nav-categories {
-  border-top: 1px solid grey;
+  border-top: 0.5px solid $blueSlate;
   padding-top: 10px;
-  border-bottom: 1px solid grey;
   padding-bottom: 10px;
 }
 
 span.gizza {
   font-family: 'ondine';
   font-size: 40px;
-  color: rgba(107, 102, 99);
+  // color: rgba(107, 102, 99);
+  color: $blueSlate;
   display: block;
   line-height: 15px;
 }
@@ -28,53 +28,19 @@ span.joyas {
   display: block;
 }
 
-
-@media (min-width: 959px) {
-
-
-  span.gizza {
-    font-family: 'ondine';
-    font-size: 50px;
-    color: rgba(107, 102, 99);
-    display: block;
-    line-height: 15px;
+li a.navlink {
+  color: $blueSlate;
+  letter-spacing: 1px;
+  font: {
+    size: $navLinkBig;
+    // family: $primary;
+    weight: $medium;
   }
-
-  span.joyas {
-    font-family: 'serif';
-    font-size: 20px;
-    color: rgba(107, 102, 99);
-    display: block;
+  &:hover {
+    // color: $hoverRed;
   }
+}
 
-  // Color de fondo de la Navbar
-  // .cbp-af-header.uk-navbar-container:not(.uk-navbar-transparent) {
-  //   background: #ffffff00;
-  // }
-
-  /* Transitions and class for reduced height */
-
-  // .cbp-af-header {
-  // 	-webkit-transition: all 0.8s;
-  // 	-moz-transition: all 0.8s;
-  // 	transition: all 0.8s;
-  // }
-  //
-  // .cbp-af-header.uk-navbar-container:not(.uk-navbar-transparent).cbp-af-header-shrink {
-  // 	height: 90px;
-  // 	background-color: #f6f6f6;
-  // }
-  //
-  // .cbp-af-header.cbp-af-header-shrink li a {
-  //   color: blue;
-  // }
-  //
-  // .cbp-af-header.cbp-af-header-shrink .gizza {
-  //   font-size: 36px;
-  // }
-  //
-  // .cbp-af-header.cbp-af-header-shrink .joyas{
-  //   font-size: 18px;
-  // }
-
+li a.burger, .uk-search .uk-search-icon, .uk-search-input {
+  color: $blueSlate;
 }
