--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -4,13 +4,14 @@ $ashBlue : #A6C2CE;
 $doveGrey : #9C8F96;
 $dandelion : #EBC57C;
 $blueSlate : #6B799E;
+$muted : #f6f6f8;
 $placeholderColor : #C6C6C6;
 
 // Font-family
 
 $logo : 'ondine';
-$primary : 'Playfair Display', serif;
-$secondary : 'Source Sans Pro', sans-serif;
+$primary : 'Playfair Display', serif; // regular, medium, bold
+$secondary : 'Source Sans Pro', sans-serif; // light, regular, bold
 
 // Font-size
 
