--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,63 +78,6 @@ p {
   line-height: 25px;
 }
 
-@media (max-width: 530px) {
-  .hiddenXS {
-    display: none;
-  }
-}
-@media (min-width: 530px) {
-  .visibleSoloXS {
-    display: none;
-  }
-}
-@media (max-width: 992px) {
-  .intro {
-    text-align: center;
-  }
-
-  .hero-btn {
-    text-align: center;
-    margin-bottom: 100px;
-  }
-
-  h1 {
-    font-size: 26px;
-  }
-
-  h2 {
-    font-size: 19px;
-  }
-
-  h3 {
-    font-size: 20px;
-  }
-
-  h4 {
-    font-size: 21px;
-  }
-
-  h5 {
-    font-size: 21px;
-  }
-
-  h6 {
-    font-size: 21px;
-  }
-
-  p {
-    font-size: 12px;
-  }
-}
-@media (min-width: 1200px) {
-  .brightness {
-    filter: brightness(50%);
-  }
-
-  .brightness:hover {
-    filter: brightness(80%);
-  }
-}
 .btn {
   letter-spacing: 2px;
   margin-bottom: 5px;
@@ -240,16 +183,15 @@ nav {
 }
 
 .nav-categories {
-  border-top: 1px solid grey;
+  border-top: 0.5px solid #6B799E;
   padding-top: 10px;
-  border-bottom: 1px solid grey;
   padding-bottom: 10px;
 }
 
 span.gizza {
   font-family: "ondine";
   font-size: 40px;
-  color: #6b6663;
+  color: #6B799E;
   display: block;
   line-height: 15px;
 }
@@ -261,23 +203,299 @@ span.joyas {
   display: block;
 }
 
-@media (min-width: 959px) {
-  span.gizza {
-    font-family: "ondine";
-    font-size: 50px;
-    color: #6b6663;
-    display: block;
-    line-height: 15px;
+li a.navlink {
+  color: #6B799E;
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: 500;
+}
+li a.burger, .uk-search .uk-search-icon, .uk-search-input {
+  color: #6B799E;
+}
+
+footer {
+  background-color: #f6f6f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+}
+
+a.footlink, span.footlink {
+  color: #6B799E;
+  font-size: 14px;
+}
+
+a.footlink:hover {
+  color: #333;
+}
+
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.material-icons.md-dark.md-inactive {
+  color: rgba(0, 0, 0, 0.26);
+}
+
+.material-icons.md-light {
+  color: white;
+}
+
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.material-icons.md-18 {
+  font-size: 18px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
+
+/*// ICON STYLES //*/
+.animated-icon {
+  position: relative;
+  width: 38px;
+  height: 38px;
+  cursor: pointer;
+  transition: 0.3s;
+  display: inline-block;
+}
+
+.animated-icon .ani {
+  top: 18.5px;
+  left: 5px;
+}
+
+.animated-icon .ani,
+.animated-icon .ani:before,
+.animated-icon .ani:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 28px;
+  background: #212121;
+  transition: 0.3s;
+}
+
+.animated-icon .ani:before,
+.animated-icon .ani:after {
+  background: inherit;
+}
+
+.animated-icon.menu-arrow-r.anim {
+  transform: rotate(180deg);
+}
+
+.animated-icon.menu-arrow-r .ani:before {
+  top: -8px;
+  left: 0;
+}
+
+.animated-icon.menu-arrow-r .ani:after {
+  top: 8px;
+  left: 0;
+}
+
+.animated-icon.menu-arrow-r.anim .ani:before {
+  top: -5.5px;
+  width: 18px;
+  transform: rotate(-45deg);
+  left: -3px;
+}
+
+.animated-icon.menu-arrow-r.anim .ani:after {
+  top: 5.5px;
+  width: 18px;
+  transform: rotate(45deg);
+  left: -3px;
+}
+
+.animated-icon.menu-arrow-l.anim {
+  transform: rotate(-180deg);
+}
+
+.animated-icon.menu-arrow-l .ani:before {
+  top: -8px;
+  right: 0;
+}
+
+.animated-icon.menu-arrow-l .ani:after {
+  top: 8px;
+  right: 0;
+}
+
+.animated-icon.menu-arrow-l.anim .ani {
+  width: 27px;
+}
+
+.animated-icon.menu-arrow-l.anim .ani:before {
+  top: -5.5px;
+  width: 18px;
+  transform: rotate(45deg);
+  right: -4px;
+}
+
+.animated-icon.menu-arrow-l.anim .ani:after {
+  top: 5.5px;
+  width: 18px;
+  transform: rotate(-45deg);
+  right: -4px;
+}
+
+.animated-icon.menu-cross .ani:before {
+  top: -8px;
+  right: 0;
+}
+
+.animated-icon.menu-cross .ani:after {
+  top: 8px;
+  right: 0;
+}
+
+.animated-icon.menu-cross.anim .ani {
+  transform: rotate(-45deg);
+}
+
+.animated-icon.menu-cross.anim .ani:before {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+.animated-icon.menu-cross.anim .ani:after {
+  top: 0;
+  transform: rotate(360deg);
+}
+
+.animated-icon.menu-cross-s .ani:before {
+  top: -8px;
+  left: 0;
+}
+
+.animated-icon.menu-cross-s .ani:after {
+  top: 8px;
+  left: 0;
+}
+
+.animated-icon.menu-cross-s.anim .ani {
+  width: 0;
+}
+
+.animated-icon.menu-cross-s.anim .ani:before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.animated-icon.menu-cross-s.anim .ani:after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+
+.animated-icon.menu-arrow-up.anim {
+  transform: rotate(90deg);
+}
+
+.animated-icon.menu-arrow-up .ani:before {
+  top: -8px;
+  left: 0;
+}
+
+.animated-icon.menu-arrow-up .ani:after {
+  top: 8px;
+  left: 0;
+}
+
+.animated-icon.menu-arrow-up.anim .ani:before {
+  top: -5.5px;
+  width: 18px;
+  transform: rotate(-45deg);
+  left: -3px;
+}
+
+.animated-icon.menu-arrow-up.anim .ani:after {
+  top: 5.5px;
+  width: 18px;
+  transform: rotate(45deg);
+  left: -3px;
+}
+
+@media (max-width: 530px) {
+  .hiddenXS {
+    display: none;
+  }
+}
+@media (min-width: 530px) {
+  .visibleSoloXS {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .intro {
+    text-align: center;
   }
 
-  span.joyas {
-    font-family: "serif";
-    font-size: 20px;
-    color: #6b6663;
-    display: block;
+  .hero-btn {
+    text-align: center;
+    margin-bottom: 100px;
   }
 
-  /* Transitions and class for reduced height */
+  h1 {
+    font-size: 26px;
+  }
+
+  h2 {
+    font-size: 19px;
+  }
+
+  h3 {
+    font-size: 14px;
+  }
+
+  h4 {
+    font-size: 13px;
+  }
+
+  h5 {
+    font-size: 10px;
+  }
+
+  h6 {
+    font-size: 9px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  footer section {
+    flex-direction: column;
+    align-self: center;
+  }
+
+  .footer-ul {
+    display: flex;
+  }
+
+  .footer-div {
+    margin-bottom: 20px;
+    align-self: center;
+    align-items: center;
+  }
 }
 * {
   box-sizing: border-box;
@@ -319,6 +537,19 @@ a:hover, button:hover {
 ::selection {
   background-color: #A6C2CE !important;
   color: white;
+}
+
+.brightness {
+  filter: brightness(50%);
+}
+
+.brightness:hover {
+  filter: brightness(100%);
+}
+
+.active {
+  border-bottom: 2px solid #6B799E;
+  padding-bottom: 4px;
 }
 
 /* Para modificar los valores de la barra de scroll lateral https://codepen.io/zakkain/pen/phjBC */
