--- a/public/sass/_fonts.scss
+++ b/public/sass/_fonts.scss
@@ -23,9 +23,9 @@
 
 h1 {font-family: $primary;font-size: $h1FontSize; letter-spacing: $primarySpacing;}
 
-h2 {font-family: $primary;font-size: $h2FontSize; letter-spacing: $primarySpacing;}
+h2 {font-family: $secondary;font-size: $h2FontSize; letter-spacing: $primarySpacing;}
 
-h3 {font-family: $primary;font-size: $h3FontSize; letter-spacing: $primarySpacing;}
+h3 {font-family: $secondary;font-size: $h3FontSize; letter-spacing: $primarySpacing;}
 
 h4 {font-family: $secondary;font-size: $h4FontSize;}
 
