--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2035,7 +2035,7 @@ pre code {
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -2063,11 +2063,11 @@ pre code {
 }
 
 .form-control:focus {
-  color: #495057;
+  /* color: #495057;
   background-color: #fff;
   border-color: #80bdff;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); */
 }
 
 .form-control::-webkit-input-placeholder {
