--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -6,6 +6,7 @@ $dandelion : #EBC57C;
 $blueSlate : #6B799E;
 $muted : #f6f6f8;
 $placeholderColor : #C6C6C6;
+$bgforms : rgb(226, 231, 235);
 
 // Font-family
 
