--- a/public/sass/_forms.scss
+++ b/public/sass/_forms.scss
@@ -21,6 +21,12 @@ input, textarea, select, button {
   color: $blueSlate;
   font-size: 13px; }
 
+  textarea {
+    border-top: 1px solid $blueSlate;
+    border-bottom: 1px solid $blueSlate;
+    width: 100%;
+  }
+
 p, h1, h2, h3, h4, h5, h6, ul {
   /* margin: 0;  */
 }
@@ -131,7 +137,7 @@ button {
   // font-size: 15px;
   // color: $blueSlate;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
