--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5316,9 +5316,9 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-success {
-  color: #155724;
-  background-color: #d4edda;
-  border-color: #c3e6cb;
+  color: #6B799E;
+  /* background-color: #A6C2CE; */
+  /* border-color: #6B799E; */
 }
 
 .alert-success hr {
