base de datos agregada a la carpeta raiz

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -152,11 +152,11 @@ sup {
   top: -.5em;
 }
 
-a {
+/* a {
   color: #007bff;
   text-decoration: none;
   background-color: transparent;
-}
+} */
 
 a:hover {
   color: #0056b3;
