--- a/public/sass/_fonts.scss
+++ b/public/sass/_fonts.scss
@@ -25,7 +25,7 @@ h1 {font-family: $primary;font-size: $h1FontSize; letter-spacing: $primarySpacin
 
 h2 {font-family: $secondary;font-size: $h2FontSize; letter-spacing: $primarySpacing;}
 
-h3 {font-family: $secondary;font-size: $h3FontSize; letter-spacing: $primarySpacing;}
+h3 {font-family: $secondary;font-size: $h3FontSize;}
 
 h4 {font-family: $secondary;font-size: $h4FontSize;}
 
