--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -62,8 +62,74 @@
 
 .active {
   color: $ashBlue!important;
-  border-bottom: 2px solid $ashBlue;
+  border-bottom: 1px solid $ashBlue;
   padding-bottom: 4px;
+}
+
+.sinOferta {
+  text-decoration: line-through;
+}
+
+// Vista Productos
+
+.product {
+  border-bottom: 1px solid $ashBlue;
+    &:hover {
+      border-color: $blueSlate;
+    }
+}
+
+.product-desc {
+  text-overflow: ellipsis;
+}
+
+.inside {
+  position: relative;
+  cursor: pointer;
+}
+
+.icons-product {
+  position: absolute;
+  top: -10px;
+  right: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+// para centrar e igualar with de todos los iconos
+.ico {
+  width: 34px;
+  height: 34px;
+  display: flex!important;
+  justify-content: center;
+  align-items: center;
+}
+
+.onSale-label {
+  color: white;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 96%;
+  height: 95%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.sale {
+  background-color: $dandelion;
+  padding: 0 7px;
+  border-radius: 11px;
+}
+
+.uk-iconnav > * > a.rounded-icon {
+  display: block;
+  color: #212529;
+  background-color: #ffffffb8;
+  padding: 7px;
+  border-radius: 20px;
 }
 
 /* Para modificar los valores de la barra de scroll lateral https://codepen.io/zakkain/pen/phjBC */
